fixed horizonzal layout, proximity snapping on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,8 @@ html:focus-within {
 }
 @media (max-width: 800px) {
   html {
-    font-size: 10px;
+    font-size: 9px;
+    scroll-snap-type: y proximity;
   }
 }
 @media (max-width: 380px) {
@@ -45,6 +46,8 @@ body {
   background-color: black;
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 a {
   color: inherit;
@@ -62,7 +65,7 @@ a {
 ::-webkit-scrollbar-thumb {
   background: rgb(0, 0, 0);
   background: -moz-linear-gradient(
-    90deg,
+    90deg, 
     rgba(0, 0, 0, 1) 0%,
     rgba(218, 165, 32, 1) 50%,
     rgba(0, 0, 0, 1) 100%
@@ -102,7 +105,7 @@ a {
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
     typing 3s steps(50, end),
-    blink-caret .75s step-end infinite;
+    blink-caret .76s step-end infinite;
 }
 
 /* The typing effect */
@@ -122,6 +125,7 @@ a {
                    and (orientation: landscape) {
                     html {
                       font-size: 7px;
+                      scroll-snap-type: y proximity;
                     }
                     .image-landscape-only {
                       display: none;
